@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d77ad4be281c029bf3d8b79da2b873ecd2de351d ChangeLog
+SHA1 6f0b58e0876af8417a5044401a8a868042340378 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 f39afa0041eabfce05d003b59a14c0e96489ffa3 META.yml
+SHA1 23c324860b8fa1061df315b81eae67a5f3d1a96f META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 8b673061939e72411e4b717b9fd77b4954e33d70 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,17 +31,17 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 9fe5ba7921cefbcb60e137c8ffd877f250eebf3a lib/Term/Menus.pm
+SHA1 599b09b20e2a6f9f6d78863fb7efd2d9196625dd lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJRwerhAAoJEBa/9Pad787ECMwH/j8MTo2Yfk2RYgYpJNLVObFg
-3EHG5Lp+HljHAJFB7T+8PWmSuSEzywDTezmk75jD5baWhhOwq6/6Kb2mTUqnjyIZ
-QBaHO1UGAHNZ9MTpJi+VgslELh4f+d/KnbN62Z/7tiJeGo3EdvuclgH8Hqzape05
-nZT2fHlcLve7lbCdWjtCxJGKzz6niFhPWaxBZFY3IMmdtn6YdFHBwwcrd1tJjgo/
-m4AM/++690JqYBVrW8RAE2JzwpGjqR4MvndpqGgU26wutzujO1AjykGa4JNXPlYi
-VKfwOkn8m70z09psLxVqjpF6s6jhq3G569TyhR0nIiytkWGKRx5WzCp//sC6pp4=
-=yswT
+iQEcBAEBAgAGBQJRx3CsAAoJEBa/9Pad787EBjwH/jF2Mo8OUGHDJQ1WXPBwXHfA
+KyeZnq4V2f+nLYorrihuwHX1vwStJOOuJnyiFhjNRbIRhRp79CHJulMmJxI/FFT0
+MpH4gquMN8pwSGjmHzksiOKxWfb8adJRgTzt00Or4/aq3uZEaugxLprWkF6xWXV+
+UvW9JMR/scKAml+wrg4kUQQja+5AJtMPUTRCb/59VLby+ssyXiqr2sEIfal0KIQR
+GuLsiXspIPHCRXEKhviIYlIBiwe5sLTHwe61KSFnz9XK/jFMLTN9cuMp2cnYiZ10
+K+Qsw7yk5+r1cmJiWlIHBU1vPZiCC/HKUy84Sz1bMcPDSaRpfuzgHpLuyf1FNtk=
+=o3rE
 -----END PGP SIGNATURE-----
