@@ -1,3 +1,11 @@
+2013-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.32 released.
+
+        * More work on result block. Fixed when in use
+          with FullAuto.
+
+
 2013-06-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.31 released.
